# fed-llm

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
data/: .gitkeep
fed-comms/: scrape_minutes.py  scrape_press_conferences.py  scrape_speeches.py  scrape_statements.py  test-scraper.py
fed-comms/minutes/clean/: minutes20000202.json  minutes20000822.json  minutes20001003.json  minutes20001115.json  minutes20001219.json  minutes20010320.json  minutes20010515.json  minutes20010627.json  minutes20011002.json  minutes20020813.json  minutes20020924.json  minutes20021210.json  minutes20030129.json  minutes20030625.json  minutes20030916.json  minutes20031028.json  minutes20031209.json  minutes20040810.json  minutes20041110.json  minutes20050202.json  minutes20050630.json  minutes20050809.json  minutes20060629.json  minutes20060808.json  minutes20061025.json  minutes20070131.json  minutes20070321.json  minutes20070628.json  minutes20070918.json  minutes20080318.json  minutes20081029.json  minutes20090429.json  minutes20090624.json  minutes20090812.json  minutes20090923.json  minutes20091216.json  minutes20100623.json  minutes20100810.json  minutes20100921.json  minutes20110126.json  (+55 more)
fed-comms/minutes/raw/: minutes20000202.html  minutes20000321.html  minutes20000628.html  minutes20001003.html  minutes20001115.html  minutes20010627.html  minutes20010821.html  minutes20011106.html  minutes20020319.html  (+86 more)
news/: .gitkeep
scripts/scraping/: read_jsons.py  scrape_minutes.py  scrape_press_conferences.py  scrape_speeches.py  scrape_statements.py
(+3805 files in other folders)
