[project]
name = "fed-llm"
version = "0.1.0"
description = "Federal Reserve communications scraper and analysis toolkit"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "pypdf2>=3.0.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "matplotlib>=3.8.0",
    "pydantic>=2.5.0",
    "pydantic-ai>=0.0.1",
    "scipy>=1.16.2",
]

